Double dispatch y cositas

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,5 +1,7 @@
-/facturacion/
-/hospedaje/
-/individuos/
-/clinica/
 /Sistema/
+/clinica/
+/excepciones/
+/medicos/
+/pacientes/
+/SalaEspera.class
+/individuos/
