UML v0.1 Y ALGUNOS CAMBIOS

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,7 +1,5 @@
-/Sistema/
+/.project
 /clinica/
-/excepciones/
-/medicos/
-/pacientes/
-/SalaEspera.class
-/individuos/
+/facturacion/
+/hospedaje/
+/Sistema/
